--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: 'Gilroy';
-    src: url('font/Gilroy-Regular.woff') format('woff');
+    src: url('Gilroy-Regular.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
 @font-face {
     font-family: 'Gilroy Bold';
-    src: url('font/Gilroy-Bold.woff') format('woff');
+    src: url('Gilroy-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
